<resources>
    <string name="app_name">WanAndroid</string>

    <string name="common_cancel">取消</string>
    <string name="common_confirm">确定</string>
    <string name="common_logout">退出登录</string>
    <string name="common_login">登录</string>
    <string name="common_register">注册</string>
    <string name="common_go_to_register">去注册</string>
    <string name="common_go_to_login">去登录</string>
    <string name="common_remember_password">记住密码</string>
    <string name="common_forget_password">忘记密码？</string>
    <string name="common_account_hint">用户名</string>
    <string name="common_password_hint">密码</string>
    <string name="common_ensure_password_hint">确认密码</string>
    <string name="common_welcome">欢迎使用</string>
    <string name="common_app_hint">本app由WanAndroid支持</string>
    <string name="common_loading">加载中…</string>
    <string name="common_logout_success">登出成功</string>
    <string name="common_logout_failed">登出失败</string>
    <string name="common_follow">关注</string>
    <string name="common_has_follow">已关注</string>
    <string name="common_load_failed">加载失败，请重试~</string>
    <string name="common_delete_failed">删除失败</string>
    <string name="common_add_failed">添加失败</string>
    <string name="common_modify_failed">修改失败，请重试</string>
    <string name="common_title">标题</string>
    <string name="common_content">内容</string>
    <string name="common_description">描述</string>
    <string name="common_uncategorized">未分类</string>

    <string name="skip_button">跳过</string>
    <string name="skip_button_with_time">跳过 %ds</string>

    <string name="menu_favor">收藏</string>
    <string name="menu_favor_cancel">取消收藏</string>
    <string name="menu_share">分享</string>
    <string name="menu_copy">复制链接</string>
    <string name="menu_browser">浏览器打开</string>
    <string name="menu_dark">深色模式</string>
    <string name="menu_light">浅色模式</string>
    <string name="menu_report">举报</string>
    <string name="menu_shortcut">桌面快捷方式</string>
    <string name="menu_more">更多</string>

    <string name="tab_home">首页</string>
    <string name="tab_guide">导航</string>
    <string name="tab_official">公众号</string>
    <string name="tab_project">项目</string>
    <string name="tab_mine">我的</string>

    <string name="home_tab_home">首页</string>
    <string name="home_tab_square">广场</string>
    <string name="home_tab_q_and_a">问答</string>

    <string name="guide_tab_web">导航</string>
    <string name="guide_tab_system">体系</string>
    <string name="guide_tab_tutorial">教程</string>
    <string name="guide_tab_tree">学习路径</string>

    <string name="hint_empty_list">暂无数据哦~</string>

    <string name="article_tag_new">新</string>
    <string name="article_tag_top">置顶</string>

    <string name="load_more_loading">加载中…</string>
    <string name="load_more_complete">下拉加载更多~</string>
    <string name="load_more_end">没有更多数据了~</string>
    <string name="load_more_failed">加载失败！</string>

    <string name="title_share_article">分享文章</string>
    <string name="button_share_article">分享</string>

    <string name="share_copy_to_title">复制到标题</string>
    <string name="share_copy_to_link">复制到链接</string>
    <string name="share_article_title_hint">文章标题</string>
    <string name="share_article_link_hint">文章链接</string>
    <string name="share_article_title_refresh">刷新标题</string>
    <string name="share_article_link_open">打开链接</string>
    <string name="share_input_title_hint">100字以内</string>
    <string name="share_input_link_hint">如：https://www.wanandroid.com/</string>
    <string name="share_article_hint">1. 只要是任何好文都可以分享哈，并不一定要是原创！投递的文章会进入广场 tab;\n2. CSDN，掘金，简书等官方博客站点会直接通过，不需要审核;\n3. 其他个人站点会进入审核阶段，不要投递任何无效链接，测试的请尽快删除，否则可能会对你的账号产生一定影响;\n4. 目前处于测试阶段，如果你发现500等错误，可以向我提交日志，让我们一起使网站变得更好。\n5. 由于本站只有我一个人开发与维护，会尽力保证24小时内审核，当然有可能哪天太累，会延期，请保持佛系…</string>

    <string name="tutorial_state_not_learn">未学习</string>
    <string name="tutorial_state_has_learn">已学习</string>
    <string name="tutorial_state_learning">学习中</string>

    <string name="search_hint">用空格隔开多个关键词</string>
    <string name="search_hot_key">热门搜索</string>
    <string name="search_history">历史记录</string>
    <string name="search_clear">清除</string>
    <string name="search_copy">搜索内容</string>

    <string name="toast_empty_account">请输入用户名</string>
    <string name="toast_empty_password">请输入密码</string>
    <string name="toast_empty_ensure_password">请再次输入密码</string>
    <string name="toast_password_not_same">密码不一致</string>
    <string name="toast_login_error">当前未登录，请先登录</string>
    <string name="toast_login_expires">当前登录已过期，请重新登录</string>
    <string name="toast_net_error">接口调用错误</string>
    <string name="toast_collect_failed">收藏失败</string>
    <string name="toast_uncollect_failed">取消失败</string>
    <string name="toast_shared_failed">分享失败</string>
    <string name="toast_get_title_failed">获取标题失败</string>
    <string name="toast_url_check_failed">请输入正确的网页链接</string>
    <string name="toast_share_not_empty_hint">分享文章的标题和链接不能为空</string>
    <string name="toast_logout_failed">登出失败</string>

    <string name="user_level">等级:%d</string>
    <string name="user_rank">排名:%d</string>
    <string name="user_coin">积分:%d</string>
    <string name="user_not_login">未登录</string>

    <string name="profile_id">ID</string>
    <string name="profile_username">用户名</string>
    <string name="profile_coin">积分</string>
    <string name="profile_rank">排名</string>
    <string name="profile_level">等级</string>
    <string name="profile_email">邮箱</string>

    <string name="mine_coin">我的积分</string>
    <string name="mine_share">我的分享</string>
    <string name="mine_collection">我的收藏</string>
    <string name="mine_history">历史记录</string>
    <string name="mine_todo">TODO</string>
    <string name="mine_tool">工具</string>
    <string name="mine_setting">设置</string>
    <string name="mine_profile">我的信息</string>
    <string name="mine_test">测试</string>

    <string name="setting_about">关于</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_theme">主题设置</string>
    <string name="setting_notification">通知设置</string>
    <string name="setting_shortcut">快捷方式</string>
    <string name="setting_widget">小组件</string>
    <string name="setting_update">版本</string>
    <string name="setting_history">历史记录</string>
    <string name="setting_notify">通知</string>
    <string name="setting_top_article">显示置顶</string>
    <string name="setting_banner">显示轮播</string>
    <string name="setting_policy">隐私政策</string>

    <string name="common_zero">0</string>
    <string name="unknown_level">等级:—</string>
    <string name="unknown_rank">排名:—</string>

    <string name="coin_rank">积分排行</string>

    <string name="message_tab_new">新消息</string>
    <string name="message_tab_history">历史消息</string>

    <string name="todo_title">TODO</string>
    <string name="todo_priority">P%d</string>
    <string name="todo_tag">Tag%d</string>
    <string name="todo_set_remind">设置提醒</string>
    <string name="todo_done">已完成：%s</string>
    <string name="todo_empty_hint">当前没有任何待办事件</string>
    <string name="todo_widget_description">基于WanAndroid的Todo列表</string>
    <string name="todo_widget_add_success">添加成功：%d</string>

    <string name="shortcut_disable_by_logout">未登录，禁止使用该快捷方式</string>
    <string name="shortcut_todo_add">创建Todo</string>
    <string name="shortcut_todo_add_des">创建一个新的待办事项</string>
    <string name="shortcut_todo_add_disable">已禁用创建Todo快捷方式</string>
    <string name="shortcut_todo_list">Todo列表</string>
    <string name="shortcut_todo_list_des">Todo列表</string>
    <string name="shortcut_todo_list_disable">已禁用Todo列表快捷方式</string>
    <string name="shortcut_search">搜索</string>
    <string name="shortcut_search_des">搜索站内文章/作者</string>
    <string name="shortcut_search_disable">已禁用搜索</string>
    <string name="shortcut_collection">我的收藏</string>
    <string name="shortcut_collection_des">收藏列表</string>
    <string name="shortcut_collection_disable">已禁用收藏</string>
    <string name="shortcut_manifest">静态快捷方式</string>
    <string name="shortcut_dynamic">动态快捷方式</string>
    <string name="shortcut_pined">固定快捷方式</string>

</resources>