<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.wanandroid.view.widget.InputEditText
        android:id="@+id/etAccount"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_common_blue_et"
        app:input_cursor="@drawable/drawable_cursor"
        app:input_hint="@string/common_account_hint"
        app:input_hint_text_color="@color/common_hint"
        app:input_icon="@drawable/icon_mine"
        app:input_password_type="false"
        app:input_show_clear="true"
        app:input_show_password_icon="false"
        app:input_text_size="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.wanandroid.view.widget.InputEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_common_blue_et"
        app:input_cursor="@drawable/drawable_cursor"
        app:input_hint="@string/common_password_hint"
        app:input_hint_text_color="@color/common_hint"
        app:input_icon="@drawable/icon_lock"
        app:input_password_type="true"
        app:input_show_clear="true"
        app:input_show_password_icon="true"
        app:input_text_size="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAccount" />

    <com.example.wanandroid.view.widget.InputEditText
        android:id="@+id/etEnsure"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_common_blue_et"
        app:input_cursor="@drawable/drawable_cursor"
        app:input_hint="@string/common_ensure_password_hint"
        app:input_hint_text_color="@color/common_hint"
        app:input_icon="@drawable/icon_lock"
        app:input_password_type="true"
        app:input_show_clear="true"
        app:input_show_password_icon="true"
        app:input_text_size="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_common_blue_button"
        android:stateListAnimator="@null"
        android:text="@string/common_register"
        android:textColor="@color/share_article_button_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEnsure" />

    <Button
        android:id="@+id/btGoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/transparent"
        android:text="@string/common_go_to_login"
        android:textColor="@color/common_main_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>