<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_widget_todo"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivHome"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:src="@drawable/icon_home" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_title"
            android:textColor="@color/common_icon"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/common_icon"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="2023-11-19 周日" />

        <ImageView
            android:id="@+id/ivAdd"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/icon_widget_add" />

        <ImageView
            android:id="@+id/ivRefresh"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_widget_refresh" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="@color/common_hint" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <ListView
            android:id="@+id/lvTodo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/transparent"
            android:dividerHeight="10dp"
            android:listSelector="@android:color/transparent"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:visibility="invisible"
            tools:visibility="invisible" />

        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLoginHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toast_login_error"
                android:textColor="@color/common_hint"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/common_go_to_login"
                android:textColor="@color/common_main_text"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvEmptyHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/todo_empty_hint"
            android:textColor="@color/common_hint"
            android:textSize="14sp"
            android:visibility="invisible" />

    </FrameLayout>

</LinearLayout>